[gd_scene load_steps=5 format=2]

[ext_resource path="res://tree_puncher_assets/sprites/axe_iron.png" type="Texture" id=1]
[ext_resource path="res://tree_puncher_assets/sprites/trunk_mid.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Trunk.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 52.7518

[node name="Trunk" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 2 )

[node name="LeftAxe" type="Area2D" parent="." groups=[
"Axes",
]]
position = Vector2( -80, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LeftAxe"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftAxe"]
position = Vector2( -5, -4 )
shape = SubResource( 1 )

[node name="RightAxe" type="Area2D" parent="." groups=[
"Axes",
]]
position = Vector2( 80, 0 )
scale = Vector2( -1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="RightAxe"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightAxe"]
position = Vector2( -5, -4 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
